# midas-journal-302

DiscreteCurvatureEstiimator/doc/: curvature.bib  curvature.tex
DiscreteCurvatureEstiimator/doc/fig/: gauss_angle.fig.bak  mean_angle.fig  mean_angle.fig.bak  mixed_area.fig  mixed_area2.fig  mixzed_area.fig
DiscreteCurvatureEstiimator/example/: CMakeLists.txt  DiscreteCurvatureEstimator.cxx
DiscreteCurvatureEstiimator/src/: itkQEMeshDiscreteCurvatureEstimator.h  itkQEMeshDiscreteCurvatureTensorEstimator.h  itkQEMeshDiscreteGaussianCurvatureEstimator.h  itkQEMeshDiscreteMaxCurvatureEstimator.h  itkQEMeshDiscreteMeanCurvatureEstimator.h  itkQEMeshDiscreteMinCurvatureEstimator.h  itkQEMeshDiscretePrincipalCurvaturesEstimator.h  itkQEMeshParamMatrixCoefficients.h  itkQEMeshScalarDataVTKPolyDataWriter.h
